# jaxborg

./: .gitignore  AGENTS.md  CLAUDE.md  CYBORG_DIFFERENCES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: parity.md
docs/parity/: cyborg_remove_pid_model_spec.md  cyborg_server_session_staleness.md  execution_plan.md  workaround_inventory.md
recipes/: cec_phase6_C00.yaml  cec_phase6_C00_10M.yaml  cec_phase6_C01.yaml  cec_phase6_C10.yaml  cec_phase6_C11.yaml  cec_phase6_C11_10M.yaml  cec_phase6_cjewel_10M.yaml  cec_phase6_miss_10M.yaml  cec_phase6_pbound_10M.yaml  cec_phase6_topo_10M.yaml  cyborg_matched.yaml  default.yaml  resilience.yaml  singh.yaml
scripts/: bench_quick.py  benchmark.py  benchmark_envs.py  benchmark_throughput.py  diagnose_baseline_dynamics.py  diagnose_green_gap.py  diagnose_jax_sleep.py  diagnose_obs_midep.py  diagnose_reward_parity.py  diagnose_session_selection.py  diagnose_sleep_comparison.py  diagnose_ss_gap.py  diagnose_transfer.py  eval_cyborg.py  eval_transfer.py  generate_bank.py  karten_loop.sh  mutation_test.py  parity_loop.sh  profile_reset.py  profile_step.py  ralph_wiggum.sh  train_and_eval_cyborg_matched.sh  train_cleanrl_cyborg_matched.sh  train_ippo_cc4.py  transfer_loop.sh
scripts/baselines/: eval_cleanrl_ppo.py  eval_random.py  eval_sleep.py  train_cleanrl_ppo.py  train_ppo.py  train_ray_ppo.py
scripts/configs/: ippo_cc4.yaml
scripts/dev/: aggregate_matched_v2_audit.py  aggregate_matchedv2.py  aggregate_parity_tost.py  audit_cyborg_policy.py  build_topology_bank.py  catalog.py  catalog_status.json  cec_phase5_diversity_spike.py  cec_phase5_diversity_spike_trained.py  cec_phase6_aggregate.py  cec_phase6_spike_axis_a.py  cec_phase6_spike_axis_b.py  check_red_bias.py  coverage_summary.py  first_divergence_campaign.py  karten_loop.sh  mutation_test.py  parity_gate.py  parity_loop.sh  ralph_wiggum.sh  transfer.py  transfer_loop.sh
scripts/eval/: baselines_cyborg.py  baselines_jax.py  baselines_paired.py  benchmark_jax.py  cc4_aggregate_cia.py  cc4_score_trajectories.py  cc4_trajectory_eval.py  cec_phase1_aggregate.py  cec_phase1_eval.py  cec_phase1_eval_all.sh  cec_phase1_eval_daemon.sh  cec_phase1_partial.sh  cec_phase2_action_probe.py  cec_phase2_aggregate.py  cec_phase2_eval_all.sh  cec_phase3_aggregate.py  cec_phase3_eval_all.sh  cec_phase3_probe_all.sh  cec_phase4_aggregate.py  cec_phase4_zsc_baseline.sh  cec_phase4_zsc_red_eval.sh  cec_phase4b_aggregate.py  cec_phase4b_tight.sh  cec_phase6_eval_jax.py  cec_phase6_eval_sweep.py  cec_phase6_eval_test2.sh  cyborg.py  diversity_diag.py  eval_recipe.py  export_trajectory.py  generate_cynex_trajectories.py  obs_diversity_diag.py  plot_comparison.py  ppo_cleanrl_cyborg.py  ppo_cleanrl_cyborg_eval.py  ppo_cleanrl_cyborg_verbose.py  ppo_cyborg.py  score_trajectories.py  transfer.py
scripts/prompts/: karten_parity.md
scripts/sbatch/: run_ippo.sh
scripts/train/: cec_phase1_train.sh  cec_phase2_smoke.sh  cec_phase2_train.sh  cec_phase3_smoke.sh  cec_phase3_train.sh  cec_phase4c_topology_only.sh  cec_phase6_optionb_ablation.sh  cec_phase6_test2.sh  generate_bank.py  ippo_cc4.yaml  ippo_jax.py  ppo_baseline.yaml  ppo_cleanrl_agent.py  ppo_cleanrl_cyborg.py  ppo_cyborg.py  run.sh  run_seeds.sh
src/jaxborg/: checkpoint.py  constants.py  cyborg_green_recorder.py  cyborg_red_policy_recorder.py  env.py  fsm_red_env.py  metrics_schema.py  mlflow_setup.py  observations.py  policy.py  reassignment.py  recipe.py  rewards.py  state.py  topology.py  topology_numpy.py  topology_workers.py  translate.py
tests/: catalog.py  catalog_status.json  conftest.py  test_action_encoding_invariance.py  test_action_mask.py  test_action_mask_differential.py  test_adversarial_fuzz.py  test_catalog.py  test_cc4_env.py  test_cc4_env_differential.py  test_code_review_gaps.py  test_cyborg_trace_replay.py  test_eval_red_override.py  test_fsm_action_parity.py  test_fsm_red_env.py  test_fsm_red_env_differential.py  test_game_variant.py  test_green_parity.py  test_green_unit.py  test_jaxborg_scenario_generator.py  test_metamorphic_properties.py  test_mission_bank_sampling.py  test_multi_session_stress.py  test_obs_hash_fingerprint.py  test_parity_dev_layout.py  test_parity_gate.py  test_phase6_recipes.py  test_phase_boundary_bank.py  test_phase_rewards_bank.py  test_policy_transfer_tost.py  test_pure_vs_cyborg_topology.py  test_recipe_phase6_smoke.py  test_recipes_smoke.py  test_red_selectors.py  test_reset_cyborg_env.py  test_resilience_roles.py  test_reward_comparison.py  test_session_lifecycle_invariants.py  test_topology_bank_sampling.py  test_topology_ordering.py  (+3 more)
tests/differential/: action_translator.py  blue_mask_projection.py  fuzzer.py  green_recorder.py  harness.py  parity_rng_replay.py  recording_rng.py  state_comparator.py  test_adam_step_parity.py  test_blue_policy_fuzz.py  test_fsm_parity.py  test_matched_rng_reward_parity.py  test_ppo_update_parity.py  test_random_sync.py  test_red_policy_parity.py  test_replay_trajectory_parity.py  test_reward_cc4_contract.py  test_strict_harness_mode.py
tests/l3/: test_cyborg_trained_blue.py  test_full_episode_fuzzing.py  test_trained_blue_policy.py
tests/l3_independent/: test_full_episode_fuzzing.py  test_unsync_episode.py
tests/subsystems/: test_action_duration.py  test_action_ordering.py  test_axis_b_router_links.py  test_axis_c_phase_rewards.py  test_axis_d_subnet_pairs.py  test_blue_analyse.py  test_blue_decoys.py  test_blue_messages.py  test_blue_monitor.py  test_blue_remove.py  test_blue_restore.py  test_blue_traffic.py  test_blue_translation.py  test_cc4_new_red_actions.py  test_cross_subnet_reassignment.py  test_dynamic_topology.py  test_eval_seed_uniqueness.py  test_exploit_monitor_remove_chain.py  test_exploit_session_roll.py  test_fsm_red_agent.py  test_full_episode_fuzzing.py  test_green_agents.py  test_green_parity_tape.py  test_green_shuffle.py  test_green_vmap_pure_parity.py  test_mission_profile.py  test_multi_agent_messaging.py  test_observations.py  test_phase_transitions.py  test_priority_order_parity.py  test_red_impact.py  (+10 more)
(+108 files in other folders)
