[project]
name = "jaxborg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chex",
    "cyborg",
    "distrax",
    "flax",
    "jax",
    "jaxmarl",
    "mlflow>=3.10.0",
    "optax",
    "pyyaml",
    "torch>=2.0",
]

[project.scripts]
export-generated-topology = "jaxborg.scenarios.cc4.topology_cli:export_generated_main"
export-cyborg-topology = "jaxborg.scenarios.cc4.topology_cli:export_cyborg_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxborg"]

[tool.uv.sources]
cyborg = { git = "https://github.com/PaulHax/cage-challenge-4.git", rev = "69ded9aa40b16ce87f7106fe961f68ad08d47176" }
jaxmarl = { git = "https://github.com/FLAIROx/JaxMARL.git", branch = "main" }

[dependency-groups]
dev = [
    "ruff",
    "pytest-xdist",
]
cuda = [
    "jax-cuda12-pjrt==0.4.38",
    "jax-cuda12-plugin==0.4.38",
    "nvidia-cublas>=13.2",
    "nvidia-cudnn-cu13>=9.19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto -m 'not slow'"
markers = [
    "slow: integration/smoke tests that don't need to run after every core logic change",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
