[project]
name = "jaxborg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chex",
    "cyborg",
    "distrax",
    "flax",
    "jaxmarl",
    "mlflow>=3.10.0",
    "optax",
    "pyyaml",
    "torch>=2.0",
]

# Pick exactly one — leaving both unspecified pulls jax in only via the
# transitive deps of jaxmarl/flax (CPU jaxlib), which silently masks the
# wrong-backend trap on GPU hosts. CI uses `--extra cpu`; GPU hosts use
# `--extra cuda`.
#
# `cuda` lists the cuda12 plugin packages directly rather than via
# `jax[cuda12]` because the latter pulls in `jax-cuda12-plugin[with-cuda]`,
# which requires nvidia-cudnn-cu12>=9.1 — collides with cyborg's pinned
# torch==2.2.0 (needs cudnn 8.9.2.26 in the cu12 namespace). Pinning to
# the cu13 namespace avoids the conflict.
[project.optional-dependencies]
cpu = ["jax[cpu]==0.4.38"]
cuda = [
    "jax-cuda12-pjrt==0.4.38",
    "jax-cuda12-plugin==0.4.38",
    "nvidia-cublas>=13.2",
    "nvidia-cudnn-cu13>=9.19",
]

[project.scripts]
export-generated-topology = "jaxborg.scenarios.cc4.topology_cli:export_generated_main"
export-cyborg-topology = "jaxborg.scenarios.cc4.topology_cli:export_cyborg_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxborg"]

[tool.uv]
override-dependencies = [
    "matplotlib>=3.9",
]

[tool.uv.sources]
cyborg = { git = "https://github.com/PaulHax/cage-challenge-4.git", rev = "69ded9aa40b16ce87f7106fe961f68ad08d47176" }
jaxmarl = { git = "https://github.com/FLAIROx/JaxMARL.git", branch = "main" }

[dependency-groups]
dev = [
    "ruff",
    "pytest-xdist",
]
# The previous `[dependency-groups.cuda]` is superseded by the `cuda` extra
# in `[project.optional-dependencies]` above. `jax[cuda12]` brings in the
# matching cuda12 pjrt + plugin so we don't have to pin them ourselves.

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto -m 'not slow'"
markers = [
    "slow: integration/smoke tests that don't need to run after every core logic change",
]
filterwarnings = [
    "ignore:JAXopt is no longer maintained.*:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
